# jf-nested-dielectric

./: .gitignore  CMakeLists.txt  README  README.md  license.txt  photon.md
binaries/v1.0.5/osx/arnold_4.2.6.1/: jf_nested_dielectric.dylib
source/: CMakeLists.txt  Makefile  jf_nested_dielectric.cpp  jf_nested_dielectric.h  spectral_distributions.h
source/c4dtoa/: jf_nested_dielectric.mtd
source/c4dtoa/description/: ainode_jf_nested_dielectric.h  ainode_jf_nested_dielectric.res
source/c4dtoa/strings_us/description/: ainode_jf_nested_dielectric.str
source/jf_nested_dielectric/: CMakeLists.txt  jf_nested_dielectric.cpp  jf_nested_dielectric.h  spectral_distributions.h
source/jf_nested_dielectric/mtoa/: jf_nested_dielectricTemplate.py
source/jf_nested_dielectric/sitoa/: jf_nested_dielectric.spdl
source/jf_photon/: CMakeLists.txt  Makefile  jf_photon.cpp
source/jf_photon/mtoa/: jf_photon.mtd  jf_photonTemplate.py
source/mtoa/: jf_nested_dielectric.mtd  jf_nested_dielectricTemplate.py
source/photon/: jf_photon.cpp  photonics_to_do.py
source/sitoa/: jf_nested_dielectric.spdl
